<resources>
    <string name="app_name">长沙博物馆</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fromat">格式有误</string>
    <string name='submit'>确定</string>
    <string name="ip_nospace">IP不能为空</string>
    <string name='close'>关闭</string>
    <string name="install_text">请先安装测试程序</string>
    <string name="delete_success">删除成功</string>
    <string name="download">下载</string>
    <string name="msg_error_pwd">密码无效，请重新输入</string>
    <string name="get_power_perm_success">已获取关机权限，请按关机键进行关机</string>
    <string name="loading">请稍候…</string>
    <string name="unit_four">四展厅</string>
    <string name="three_unit">三展厅</string>
    <string name="two_unit">二展厅</string>
    <string name="one_unit">一展厅</string>
    <string name="welcome_cs">欢迎来到长沙博物馆！</string>
    <string name="sure">确定</string>
    <string name="digital_play">数字点播</string>
    <string name="map_guide">地图导览</string>
    <string name="intro">场馆简介</string>
    <string name="list_goods">文物列表</string>
    <string name="input_pwd">请输入密码 ：</string>
    <string name="pwd_empty">输入编号为空</string>
    <string name="file_exist">输入的展品编号不存在</string>
    <string name="input_num">请输入展品编号</string>
    <string name="is_exist">是否要离开讲解界面</string>
    <string name="cancel">取消</string>
    <string name="big_txt">大</string>
    <string name="small_txt">小</string>
    <string name="tip_somuch">当您身边的展品具有语音讲解时，会在地图导览和馆藏精品功能界面下弹出提示框。点击收听即可收听语音讲解</string>
    <string name="auto_voice">自动讲解</string>
    <string name="listener">收听</string>
    <string name="light_control">亮度调节</string>
    <string name="lan_select">语言选择</string>
    <string name="device_no">设备编号：</string>
    <string name="unit_five">特展一厅</string>
    <string name="unit_six">特展二厅</string>
    <string name="swich_floor">收到其他楼层信号，是否切换楼层？</string>
    <string name="xueyuan">博学园</string>
    <string name="leyuan">博乐园</string>
    <!-- 设置-->
    <string-array name="settings">
        <item>自动讲解</item>
        <item>智慧服务</item>
        <item>节能模式</item>
        <item>公众关机</item>
        <item>自动模式</item>
        <item>感应模式</item>
        <item>报警模式</item>
        <item>网络设置</item>
        <item>服务器设置</item>
        <item>RSSI设置</item>
        <item>工程模式</item>
        <item>测试平台</item>
        <item>应用更新</item>
        <item>清除资源</item>
        <item>管理员密码</item>
        <item>设备编号</item>
        <item>版本信息</item>
        <item>数据库更新</item>
        <item>资源更新</item>
    </string-array>
</resources>
