<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f2_map"
    tools:context="com.hengda.smart.changsha.d.ui.MapFloorTwo">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/exhibition_one_F2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textStyle="bold|italic"
        android:textColor="#000"
        android:textSize="14sp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/unit_five" />
    <TextView
        android:id="@+id/exhibition_two_F2"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:textStyle="bold|italic"
        android:textColor="#000"
        android:textSize="14sp"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/unit_six" />

    <TextView
        android:id="@+id/exhibition_three_F2"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:textSize="14sp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:text="@string/unit_four" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold|italic"
    android:textColor="#000"
    android:textSize="14sp"
    android:layout_marginLeft="122dp"
    android:layout_marginTop="65dp"
    android:text="@string/leyuan"/>
</FrameLayout>
