<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:orientation="vertical"
    tools:context="com.hengda.smart.changsha.d.Main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fff"
        android:gravity="right|center">
        <ImageView
            android:id="@+id/wifi_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            />
        <ImageView
            android:id="@+id/voice_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/voice_open"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:id="@+id/volumn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:layout_marginRight="10dp"
            android:textColor="#ffb95f"
            android:textSize="10sp"
            android:text="30"/>
        <ImageView
            android:id="@+id/battery_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/battery_one"
            android:layout_marginRight="10dp"
            />
        <ImageView
            android:id="@+id/auto_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/auto_voice"
            android:layout_marginRight="10dp"
            />


    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
android:gravity="center"
    android:orientation="horizontal">
    <!--<ImageView-->
        <!--android:id="@+id/scan"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/scan_select"/>-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:src="@drawable/logo" />
    <ImageView
        android:id="@+id/setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     android:layout_marginLeft="120dp"
        android:src="@drawable/settingbtn"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/digital_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/digital_selector" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/zhezao" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/cloud" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digital_play"
                    android:textColor="#ffb95f"
                    android:textSize="25sp"
                    android:id="@+id/txt_digital" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/map_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mapguide_selector" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/zhezao" />

                <TextView
                    android:id="@+id/txt_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_guide"
                    android:textColor="#ffb95f"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/cloud" />
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/plafrom_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro_selector" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/zhezao" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/cloud" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro"
                    android:textColor="#ffb95f"
                    android:textSize="25sp"

                    android:id="@+id/tzt_intro"
                     />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/list_wenwu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/list_selector" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/zhezao" />

                <TextView
                    android:id="@+id/txt_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_goods"
                    android:textColor="#ffb95f"

                    android:textSize="25sp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/cloud" />
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
